# libgrpp

./: .gitignore  CMakeLists.txt  README.md
libgrpp/: CMakeLists.txt  angular_integrals.c  angular_integrals.h  bessel_table.c  binomial.c  binomial.h  boys.c  boys.h  diff_gaussian.c  diff_gaussian.h  factorial.c  factorial.h  fortran.c  full_grpp_integrals.c  gfun.c  gfun.h  grpp.c  grpp_integrals_gradient.c  gslbessel.c  gslbessel.h  init_finalize.c  kinetic.c  kinetic.h  libgrpp.h  lmatrix.c  lmatrix.h  momentum.c  momentum.h  mymathlib.c  mymathlib.h  mymathlib_dawson.c  mymathlib_incomplete_gamma.c  norm_gaussian.c  norm_gaussian.h  nuclear_attraction.c  nuclear_models.c  nuclear_models.h  outercore_integrals.c  overlap.c  overlap.h  (+31 more)
libgrpp/gsl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.status  libtool
libgrpp/gsl/.deps/: gsl-histogram.Po  gsl-randist.Po  version.Plo
libgrpp/gsl/blas/: Makefile
libgrpp/gsl/blas/.deps/: blas.Plo
libgrpp/gsl/block/: Makefile
libgrpp/gsl/block/.deps/: block.Plo  file.Plo  init.Plo
libgrpp/gsl/bspline/: Makefile
libgrpp/gsl/bspline/.deps/: bspline.Plo  greville.Plo
libgrpp/gsl/bst/: Makefile
libgrpp/gsl/bst/.deps/: avl.Plo  bst.Plo  rb.Plo  trav.Plo
libgrpp/gsl/cblas/: Makefile
libgrpp/gsl/cblas/.deps/: caxpy.Plo  ccopy.Plo  cdotc_sub.Plo  cdotu_sub.Plo  cgbmv.Plo  cgemm.Plo  cgemv.Plo  cgerc.Plo  cgeru.Plo  chbmv.Plo  chemm.Plo  chemv.Plo  cher.Plo  cher2.Plo  cher2k.Plo  cherk.Plo  chpmv.Plo  chpr.Plo  chpr2.Plo  cscal.Plo  csscal.Plo  cswap.Plo  csymm.Plo  csyr2k.Plo  csyrk.Plo  ctbmv.Plo  ctbsv.Plo  ctpmv.Plo  ctpsv.Plo  ctrmm.Plo  ctrmv.Plo  ctrsm.Plo  ctrsv.Plo  dasum.Plo  daxpy.Plo  dcopy.Plo  ddot.Plo  dgbmv.Plo  dgemm.Plo  dgemv.Plo  (+103 more)
libgrpp/gsl/cdf/: Makefile
libgrpp/gsl/cdf/.deps/: beta.Plo  betainv.Plo  binomial.Plo  cauchy.Plo  cauchyinv.Plo  chisq.Plo  chisqinv.Plo  exponential.Plo  exponentialinv.Plo  exppow.Plo  fdist.Plo  fdistinv.Plo  flat.Plo  flatinv.Plo  gamma.Plo  gammainv.Plo  gauss.Plo  gaussinv.Plo  geometric.Plo  gumbel1.Plo  gumbel1inv.Plo  gumbel2.Plo  gumbel2inv.Plo  hypergeometric.Plo  laplace.Plo  laplaceinv.Plo  logistic.Plo  logisticinv.Plo  lognormal.Plo  lognormalinv.Plo  nbinomial.Plo  pareto.Plo  paretoinv.Plo  pascal.Plo  poisson.Plo  rayleigh.Plo  rayleighinv.Plo  tdist.Plo  tdistinv.Plo  weibull.Plo  (+1 more)
libgrpp/gsl/cheb/: Makefile
libgrpp/gsl/cheb/.deps/: deriv.Plo  eval.Plo  init.Plo  integ.Plo
libgrpp/gsl/cmake/: gsl-config-version.cmake  gsl-config.cmake
libgrpp/gsl/combination/: Makefile
libgrpp/gsl/combination/.deps/: combination.Plo  file.Plo  init.Plo  inline.Plo
libgrpp/gsl/complex/: Makefile
libgrpp/gsl/complex/.deps/: inline.Plo  math.Plo
libgrpp/gsl/const/: Makefile
libgrpp/gsl/deriv/: Makefile
libgrpp/gsl/deriv/.deps/: deriv.Plo
libgrpp/gsl/dht/: Makefile
libgrpp/gsl/dht/.deps/: dht.Plo
libgrpp/gsl/diff/: Makefile
libgrpp/gsl/diff/.deps/: diff.Plo
libgrpp/gsl/doc/: Makefile
libgrpp/gsl/doc/examples/: Makefile
libgrpp/gsl/eigen/: Makefile
libgrpp/gsl/eigen/.deps/: francis.Plo  gen.Plo  genherm.Plo  genhermv.Plo  gensymm.Plo  gensymmv.Plo  genv.Plo  herm.Plo  hermv.Plo  jacobi.Plo  nonsymm.Plo  nonsymmv.Plo  schur.Plo  sort.Plo  symm.Plo  symmv.Plo
libgrpp/gsl/err/: Makefile
libgrpp/gsl/err/.deps/: error.Plo  message.Plo  stream.Plo  strerror.Plo
libgrpp/gsl/fft/: Makefile
libgrpp/gsl/fft/.deps/: dft.Plo  fft.Plo
libgrpp/gsl/filter/: Makefile
libgrpp/gsl/filter/.deps/: gaussian.Plo  impulse.Plo  median.Plo  rmedian.Plo
libgrpp/gsl/fit/: Makefile
libgrpp/gsl/fit/.deps/: linear.Plo
libgrpp/gsl/gsl/: CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  copy-headers.cmake
libgrpp/gsl/histogram/: Makefile
libgrpp/gsl/histogram/.deps/: add.Plo  add2d.Plo  calloc_range.Plo  calloc_range2d.Plo  copy.Plo  copy2d.Plo  file.Plo  file2d.Plo  get.Plo  get2d.Plo  init.Plo  init2d.Plo  maxval.Plo  maxval2d.Plo  oper.Plo  oper2d.Plo  params.Plo  params2d.Plo  pdf.Plo  pdf2d.Plo  reset.Plo  reset2d.Plo  stat.Plo  stat2d.Plo
libgrpp/gsl/ieee-utils/: Makefile
libgrpp/gsl/ieee-utils/.deps/: env.Plo  fp.Plo  make_rep.Plo  print.Plo  read.Plo
libgrpp/gsl/integration/: Makefile
libgrpp/gsl/integration/.deps/: chebyshev.Plo  chebyshev2.Plo  cquad.Plo  exponential.Plo  fixed.Plo  gegenbauer.Plo  glfixed.Plo  hermite.Plo  jacobi.Plo  laguerre.Plo  legendre.Plo  qag.Plo  qagp.Plo  qags.Plo  qawc.Plo  qawf.Plo  qawo.Plo  qaws.Plo  qcheb.Plo  qk.Plo  qk15.Plo  qk21.Plo  qk31.Plo  qk41.Plo  qk51.Plo  qk61.Plo  qmomo.Plo  qmomof.Plo  qng.Plo  rational.Plo  romberg.Plo  workspace.Plo
libgrpp/gsl/interpolation/: Makefile
libgrpp/gsl/interpolation/.deps/: accel.Plo  akima.Plo  bicubic.Plo  bilinear.Plo  cspline.Plo  inline.Plo  interp.Plo  interp2d.Plo  linear.Plo  poly.Plo  spline.Plo  spline2d.Plo  (+1 more)
libgrpp/gsl/lib/: libgsl.la  libgslcblas.la  libgslcblas.so.0.0.0
libgrpp/gsl/linalg/: Makefile
libgrpp/gsl/matrix/: Makefile
libgrpp/gsl/min/: Makefile
libgrpp/gsl/monte/: Makefile
libgrpp/gsl/movstat/: Makefile
libgrpp/gsl/multifit/: Makefile
libgrpp/gsl/multifit_nlinear/: Makefile
libgrpp/gsl/multilarge/: Makefile
libgrpp/gsl/multilarge_nlinear/: Makefile
libgrpp/gsl/multimin/: Makefile
libgrpp/gsl/multiroots/: Makefile
libgrpp/gsl/multiset/: Makefile
libgrpp/gsl/ntuple/: Makefile
libgrpp/gsl/ode-initval/: Makefile
libgrpp/gsl/ode-initval2/: Makefile
libgrpp/gsl/permutation/: Makefile
libgrpp/gsl/poly/: Makefile
libgrpp/gsl/qrng/: Makefile
libgrpp/gsl/randist/: Makefile
libgrpp/gsl/rng/: Makefile
libgrpp/gsl/roots/: Makefile
libgrpp/gsl/rstat/: Makefile
libgrpp/gsl/siman/: Makefile
libgrpp/gsl/sort/: Makefile
libgrpp/gsl/spblas/: Makefile
libgrpp/gsl/specfunc/: Makefile
libgrpp/gsl/splinalg/: Makefile
libgrpp/gsl/spmatrix/: Makefile
libgrpp/gsl/statistics/: Makefile
libgrpp/gsl/sum/: Makefile
libgrpp/gsl/sys/: Makefile
libgrpp/gsl/test/: Makefile
libgrpp/gsl/utils/: Makefile
libgrpp/gsl/vector/: Makefile
libgrpp/gsl/wavelet/: Makefile
(+812 files in other folders)
